# libGLare

./: .gitignore  README.md
source/: CMakeLists.txt
source/inc/: GLrApplication.hpp  GLrEngine.hpp  GLrExport.hpp  GLrMacros.hpp  GLrModule.hpp
source/inc/graph/: ElementNode.hpp  Node.hpp  NodeDelegate.hpp  headers.cmake
source/inc/opengl/: GLWidget.hpp  headers.cmake
source/inc/opengl/buffers/: BufferObject.hpp  BufferObject_GL2.hpp  BufferObject_GL3.hpp  IBufferObject.hpp
source/inc/opengl/shading/: Program.hpp  Shader.hpp
source/inc/opengl/state/: SamplerBufferObject.hpp  VertexArrayObject.hpp
source/inc/rendering/: Context_GL2.hpp  Context_GL3.hpp  ICamera.hpp  IContext.hpp  IRendererObject.hpp  PrivateGLWidget.hpp  Renderer.hpp  headers.cmake
source/inc/wrappers/: DummyWrapper.hpp  IWrapperGenerator.hpp  WElementInstance.hpp  headers.cmake
source/inc/wrappers/geometry/: IWMesh.hpp  IWTrianglesPatch.hpp  WGeometry.hpp  WMesh_GL2.hpp  WTrianglesPatch_GL2.hpp
source/inc/wrappers/scene/: WMatrix.hpp  WNode.hpp  WRotation.hpp  WScale.hpp  WTransformation.hpp  WTranslation.hpp  WVisualScene.hpp
source/src/: GLrApplication.cpp  GLrEngine.cpp  GLrModule.cpp
source/src/graph/: ElementNode.cpp  Node.cpp  sources.cmake
source/src/opengl/: GLWidget.cpp  sources.cmake
source/src/opengl/buffers/: BufferObject.cpp  BufferObject_GL2.cpp  BufferObject_GL3.cpp  IBufferObject.cpp
source/src/opengl/shading/: Program.cpp  Shader.cpp
source/src/opengl/state/: VertexArrayObject.cpp
source/src/rendering/: Context_GL2.cpp  Context_GL3.cpp  IContext.cpp  PrivateGLWidget.cpp  Renderer.cpp  sources.cmake
source/src/wrappers/: DummyWrapper.cpp  WElementInstance.cpp  sources.cmake
source/src/wrappers/geometry/: IWMesh.cpp  IWTrianglesPatch.cpp  WGeometry.cpp  WMesh_GL2.cpp  WTrianglesPatch_GL2.cpp
source/src/wrappers/scene/: WMatrix.cpp  WNode.cpp  WRotation.cpp  WScale.cpp  WTransformation.cpp  WTranslation.cpp  WVisualScene.cpp
